Added entity CLINICAL_NOTE + many-to-one relationship to PATIENT_INFO

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -38,6 +38,12 @@
                                     <span >Patient Info</span>
                                 </a>
                             </li>
+                        <li ui-sref-active="active">
+                                <a ui-sref="clinical-note" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span >Clinical Note</span>
+                                </a>
+                            </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
