Added entity CAP_MODEL. Unit test & protractor OK.

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -44,6 +44,12 @@
                                     <span >Clinical Note</span>
                                 </a>
                             </li>
+                        <li ui-sref-active="active">
+                                <a ui-sref="cap-model" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span >Cap Model</span>
+                                </a>
+                            </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
