--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -56,6 +56,12 @@
                                     <span >Aux File</span>
                                 </a>
                             </li>
+                        <li ui-sref-active="active">
+                                <a ui-sref="baseline-diagnosis" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span >Baseline Diagnosis</span>
+                                </a>
+                            </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
